src/public/scss/components/_player.scss
.player {
  z-index: 10;
  position: fixed;
  top: 0;
  left: 0;
  width: 0%;
  height: 0%;
  background-color: $dim;
  overflow: hidden;
  > .wrapper {
    @include displayFlex;
    position: relative;
    width: 100%;
    height: 100%;
    padding-top: 2px;
    box-shadow: inset 0 2px 0 0 $dim;
    .list {
      width: 100%;
      height: 100%;
      margin: 0;
      padding: 0;
      overflow: hidden;
      // overflow-x: hidden;
      // overflow-y: auto;
      // &.flex-column {
      //   @include displayFlex;
      //   flex-direction: column;
      // }
      &.video-list {
        @include displayFlex;
        flex-wrap: wrap;
      }
      &.chat-list {
        width: 24*$em;
        min-width: 24*$em;
      }
    }
    > .tools {
      @include displayFlex;
      position: absolute;
      bottom: 100%;
      left: 0;
      > *:not(.wrap), .main-tool {
        background-color: $primary;
        max-height: 2*$em;
        padding: .45*$em .5*$em;
        border: none;
        cursor: pointer;
        border-right: 2px solid $dimmer;
        &.streamers {
          font-weight: bold;
        }
        &:hover {
          background-color: $light
        }
      }
      .wrap {
        position: relative;
        > * {
          min-width: 14*$em;
        }
        .hover-msg {
          @include displayFlex;
          align-items: center;
          justify-content: center;
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          box-shadow: inset -2px 0 0 0 $dimmer;
          background-color: $primary;
          color: $offBlack;
          pointer-events: none;
          opacity: 1;
        }
        &:hover {
          .hover-msg {
            opacity: 0;
          }
        }
      }
      .closer {}
    }
  }
  .side-flexer {
    position: relative;
    width: 2*$em;
    background-color: rgba($primary, .6);
    &:before {
      content: "";
      position: absolute;
      top: 50%;
      left: 1.5*$em;
      width: 0;
      height: 0;
      border-top: .125*$em solid transparent;
      border-left: .25*$em solid $primary;
      border-bottom: .125*$em solid transparent;
    }
  }
}

@mixin streamTools {
  .tools {
    top: 2*$em;
    flex-direction: column;
    width: 100%;
    max-width: 14*$em;
    background-color: $dimmer;
    padding: 0;
    text-align: center;
    > *:not(.mobile):not(.host) {
      width: 100%;
      max-height: 0;
      height: 0;
      padding-top: 0;
      padding-bottom: 0;
      border-right: none;
      overflow: hidden;
      &:not(:last-child) {
        border-bottom: 0px solid $dimmer;
      }
    }
    &.menu-open {
      padding: 2px;
      > *:not(.mobile):not(.host) {
        max-height: 100%;
        height: auto;
        padding-top: .25*$em;
        padding-bottom: .25*$em;
        overflow: hidden;
        &.streamer {
          display: none;
        }
        &:not(:last-child) {
          border-bottom: 2px solid $dimmer;
        }
      }
      .mobile {
        div {
          &.lines {
            div {
              &:nth-child(1) {
                position: relative;
                top: 0;
              }
              &:nth-child(2) {
                position: relative;
                top: -6px;
              }
              &:nth-child(3) {
                position: relative;
                top: -12px;
              }
            }
          }
        }
      }
    }
    .mobile {
      z-index: 0;
      @include displayFlex;
      flex-direction: row;
      position: absolute;
      bottom: 100%;
      left: 0;
      width: 100%;
      height: 2*$em;
      border: none;
      box-shadow: inset 0 0 0 2px $dimmer;
      @include userSelect;
      cursor: default;
      div {
        &.name {
          position: relative;
          width: 100%;
          // min-width: 10*$em;
          // max-width: 10*$em;
          padding-right: 4px;
          overflow: hidden;
          &:after {
            content: "";
            position: absolute;
            top: 0;
            right: 0;
            width: 30px;
            height: 100%;
            background-image: singular-gradient(90deg, transparent, $primary);
          }
          // &:hover {
          //   a {
          //     position: absolute;
          //     right: 0;
          //   }
          // }
        }
        &.lines {
          @include displayFlex;
          flex-direction: column;
          justify-content: space-around;
          width: 2*$em;
          padding-left: 4px;
          border-left: 2px solid $dimmer;
          cursor: pointer;
          div {
            position: relative;
            top: 0;
            left: 0;
            max-width: 100%;
            height: 2px;
            margin: auto 0;
            background-color: black;
            text-align: center;
          }
        }
      }
    }
  }
}
/* ... */

